[tool.poetry]
name = "web-automation"
version = "0.1.0"
description = "Automation Tests for DOUZONEBIZONE 'Wehago' web application > Contact section"
authors = ["provision95 <x3m0941@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-order = "^1.0.1"
selenium = "^4.4.0"
allure-pytest = "^2.9.45"
webdriver-manager = "^3.8.3"

readme = "README.md"

repository = "https://github.com/provision95/web-automate.git"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
